FIx mobile adaptation.

--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -82,9 +82,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="chart col-sm-12 col-lg-8 w-100 px-0 px-lg-2 d-flex align-items-center"
-                    style="position: relative">
-                    <canvas id="myChart"></canvas>
+                <div class="col-sm-12 col-lg-8 w-100 px-0 px-lg-2 d-flex align-items-center" style="position: relative">
+                    <canvas height="300" id="myChart"></canvas>
                 </div>
             </div>
         </main>
