Edit some paddings.

--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -33,7 +33,7 @@
         <header></header>
         <main class="container-fluid d-flex flex-grow-1 justify-content-center">
             <div class="container-fluid row px-0 px-lg-2">
-                <div class="inputs col-sm-12 col-lg-4 ">
+                <div class="inputs col-sm-12 col-lg-4 p-0">
                     <div class="formula-input col-12">
                         <div class="form-group">
                             <label for="functionInput">Formula:</label>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row col-12 px-0 mx-0 justify-content-center">
+                    <div class="row col-12 px-0 mx-0 pb-3">
                         <div class="row col-12 px-0 mx-0 justify-content-center">
                             <label class="col-4" for="startPointInput">Start point:</label>
                             <label class="col-4" for="endPointInput">End point:</label>
