--- a/404.html
+++ b/404.html
@@ -46,6 +46,9 @@
             <a href="https://taratatuy.github.io/SplineInterpolation/">Spline Interpolation</a>
           </li>
           <li>
+            <a href="https://taratatuy.github.io/Covid-FL/">Covid fuzzy logic system</a>
+          </li>
+          <li>
             <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
           </li>
         </ul>
