Add link to insertion sort

--- a/InsertionSort/index.html
+++ b/InsertionSort/index.html
@@ -44,6 +44,12 @@
                     <input id="fastDraw" onchange="setFastDraw()" type="checkbox">
                 </div>
             </section>
+            <section>
+                <span>
+                    Made by WB.
+                </span>
+                <a href="https://github.com/taratatuy" tabindex="-1">GitHub.</a>
+            </section>
         </footer>
     </div>
 
