--- a/404.html
+++ b/404.html
@@ -51,6 +51,9 @@
           <li>
             <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
           </li>
+          <li>
+            <a href="https://taratatuy.github.io/resume/">Resume</a>
+          </li>
         </ul>
       </div>
     </div>
