--- a/resume/index.html
+++ b/resume/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Page</title>
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/hover.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hover.css">
 
 
     <!-- Yandex.Metrika counter -->
@@ -43,12 +43,12 @@
                     </div>
                     <div class="github">
                         <a href="https://github.com/taratatuy/" target="_blank">
-                            <img src="/img/github-favicon-dark.png" alt="github icon"> <span>/taratatuy</span>
+                            <img src="img/github-favicon-dark.png" alt="github icon"> <span>/taratatuy</span>
                         </a>
                     </div>
                 </nav>
                 <div class="info">
-                    <img src="/img/avatar.png" width="300px" height="300px" alt="Profile photo">
+                    <img src="img/avatar.png" width="300px" height="300px" alt="Profile photo">
                     <div class="discription">
                         <h2>Добро пожаловать</h2><br>
                         Вы находитесь на личной странице разработчика Тимофеева Александра.
@@ -65,7 +65,7 @@
             <section class="pj">
                 <div class="photo">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/SplineInterpolation.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/SplineInterpolation.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>
@@ -92,7 +92,7 @@
             <section class="pj">
                 <div class="photo">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/Fuzzy.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/Fuzzy.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>
@@ -121,7 +121,7 @@
             <section class="pj">
                 <div class="photo">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/InsertionSort.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/InsertionSort.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>
@@ -151,7 +151,7 @@
             <section class="pj">
                 <div class="photo">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/CanvasCircles3.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/CanvasCircles3.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>
@@ -177,7 +177,7 @@
             <section class="pj">
                 <a class="photo" href="https://github.com/taratatuy/favorites-list-component/" target="_blank">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/VueComponent.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/VueComponent.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>Visit github</h2>
@@ -218,7 +218,7 @@
             <section class="pj">
                 <a class="photo" href="https://github.com/taratatuy/TheXPjct-server/" target="_blank">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/mechanical-gears-2.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>Visit github</h2>
@@ -238,7 +238,7 @@
             <section class="pj">
                 <a class="photo" href="https://github.com/taratatuy/DailyRadioServer/" target="_blank">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/mechanical-gears-2.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>Visit github</h2>
@@ -257,7 +257,7 @@
             <section class="pj">
                 <a class="photo" href="https://github.com/taratatuy/EvgenServer/" target="_blank">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/mechanical-gears-2.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>Visit github</h2>
@@ -275,7 +275,7 @@
             <section class="pj">
                 <a class="photo" href="https://github.com/taratatuy/Writebot/" target="_blank">
                     <div class=" hovereffect">
-                        <img class=" img-responsive" src="/img/mechanical-gears-2.png" height="200px" width="300px"
+                        <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
                             <h2>Visit github</h2>
