--- a/resume/index.html
+++ b/resume/index.html
@@ -86,7 +86,7 @@
                     <a href="https://taratatuy.github.io/SplineInterpolation/" target="_blank">Интерполяция
                         сплайнами</a><br>
                     Реализация метода сплайн интерполяции. <br> Проект сделан с
-                    использованием библиотек bootstrap 5, Chart.js. Верстка адаптивная.
+                    использованием библиотек: bootstrap, Chart.js. Верстка адаптивная.
                 </div>
             </section>
             <section class="pj">
@@ -113,7 +113,7 @@
                     <a href="https://taratatuy.github.io/Covid-FL/" target="_blank">Нечеткая система на основе численных
                         данных</a><br>
                     Реализация метода Мамдани, обучающегося на входном датасете. <br> Проект написан на нативном js, без
-                    сборщиков. Здесь используется bootstrap 5, хотя почти вся адаптивность компонентов реализована на
+                    сборщиков. Здесь используется bootstrap, хотя почти вся адаптивность компонентов реализована на
                     css grid (исключение - разметка первых потомков в main). Графики строятся библиотекой Chart.js.
                     Обработка xlsx файлов производится библиотекой SheetJS.
                 </div>
@@ -144,7 +144,7 @@
                     <br>
                     В данном проекте был использован генероатор для создания анимации на странице. Гегератор
                     обеспечивает синхронность выполнения: при вызове next() запускается соответствующий код перед
-                    yield. Данный подход дает воможность взвать следующий шаг итерации спустя любой произвольный
+                    yield. Данный подход позволяет вызвать следующий шаг итерации спустя любой произвольный
                     промежуток времени.
                 </div>
             </section>
@@ -187,7 +187,7 @@
                 <div class="disc">
                     <a href="https://github.com/taratatuy/favorites-list-component/" target="_blank">Компонент на
                         Vue</a> <br>
-                    Данный компонент написан для совместного проекта.
+                    Компонент написан для совместного проекта на Vue.
                     Представляет собой список с адаптивной версткой. <br> Собран при помощи vue-cli.
                 </div>
             </section>
@@ -231,8 +231,8 @@
                     полностью готово, не хватает только клиентской части. По завершению, планируется размещение на
                     heroku. Проект для отслеживания некоторых коммитов, создаваемых пользователем, и сбор по ним
                     статистики: среднее число комитов в год и месяц, периоды между коммитами и прочеее. <br>
-                    Используется библиотеки: express.js (API), mongoose (работа с mongodb), dotenv (переменные
-                    окружения)
+                    Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv (переменные
+                    окружения). Приложен .rest файл.
                 </div>
             </section>
             <section class="pj">
@@ -249,9 +249,10 @@
                     <a href="https://github.com/taratatuy/DailyRadioServer/" target="_blank">Сервер для учебного
                         проетка</a> <br>
                     Бэкэнд на Node.js. Проект написан в качестве курсовой работы в вузе. API для передачи аудио файлов с
-                    сервера на фронт (запрос к сторонним API не делается, аудио просто берется из соответсвующей папки
+                    сервера на фронт (запрос к сторонним API не делается, аудио берется из соответсвующей папки
                     на сервере). Используется библиотеки: express.js (API), mongoose (работа с mongodb), dotenv
-                    (переменные окружения), jsonwebtoken (JWT), bcrypt (шифрование ключей), sentry/node (логи в облако).
+                    (переменные окружения), jsonwebtoken (JWT), bcrypt (шифрование ключей), sentry (логи в облако).
+                    Приложен .rest файл.
                 </div>
             </section>
             <section class="pj">
