--- a/resume/index.html
+++ b/resume/index.html
@@ -286,7 +286,7 @@
                 <div class="disc">
                     <a href="https://github.com/taratatuy/Writebot/" target="_blank">Чат-бот для сервиса Twitch</a> <br>
                     Чат-бот, напсианный для канала знакомого. В ранних версиях использовал нативное twitch API, позже
-                    библиотеку tmi.js. В настоящее вреся не используется, поддержку не осуществляю.
+                    библиотеку tmi.js. В настоящее время не используется, поддержку не осуществляю.
                 </div>
             </section>
             <div class="footer">
