--- a/resume/index.html
+++ b/resume/index.html
@@ -142,9 +142,9 @@
                     <a href="https://taratatuy.github.io/InsertionSort/" target="_blank">Реализация алгоритма сортировки
                         вставками</a>
                     <br>
-                    В данном проекте был использован генероатор для создания анимации на странице. Гегератор
+                    В данном проекте был использован генератор для создания анимации на странице. Генератор
                     обеспечивает синхронность выполнения: при вызове next() запускается соответствующий код перед
-                    yield. Данный подход позволяет вызвать следующий шаг итерации спустя любой произвольный
+                    yield. Данный подход позволил вызывать следующий шаг итерации спустя любой произвольный
                     промежуток времени.
                 </div>
             </section>
@@ -171,7 +171,7 @@
                 <div class="disc">
                     <a href="https://taratatuy.github.io/CanvasCircles/" target="_blank">Анмация вокруг курсора.</a>
                     <br>
-                    Первый опят работы в canvas.
+                    Первый опыт работы в canvas.
                 </div>
             </section>
             <section class="pj">
@@ -230,7 +230,7 @@
                         проекта</a> <br> Бэкэнд на Node.js. Пока не запущен. API
                     полностью готово, не хватает только клиентской части. По завершению, планируется размещение на
                     heroku. Проект для отслеживания некоторых коммитов, создаваемых пользователем, и сбор по ним
-                    статистики: среднее число комитов в год и месяц, периоды между коммитами и прочеее. <br>
+                    статистики: среднее число коммитов в год и месяц, периоды между коммитами и прочее. <br>
                     Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv (переменные
                     окружения). Приложен .rest файл.
                 </div>
@@ -249,8 +249,8 @@
                     <a href="https://github.com/taratatuy/DailyRadioServer/" target="_blank">Сервер для учебного
                         проетка</a> <br>
                     Бэкэнд на Node.js. Проект написан в качестве курсовой работы в вузе. API для передачи аудио файлов с
-                    сервера на фронт (запрос к сторонним API не делается, аудио берется из соответсвующей папки
-                    на сервере). Используется библиотеки: express.js (API), mongoose (работа с mongodb), dotenv
+                    сервера на фронт (запрос к сторонним API не делается, аудио берется из соответствующей папки
+                    на сервере). Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv
                     (переменные окружения), jsonwebtoken (JWT), bcrypt (шифрование ключей), sentry (логи в облако).
                     Приложен .rest файл.
                 </div>
@@ -268,7 +268,7 @@
                 <div class="disc">
                     <a href="https://github.com/taratatuy/EvgenServer/" target="_blank">Сервер для мобильного
                         приложения</a> <br>
-                    Курсовой проект в вузе. Сервис для пользовательских заметок. Используется библиотеки: express.js
+                    Курсовой проект в вузе. Сервис для пользовательских заметок. Используются библиотеки: express.js
                     (API), mongoose (работа с mongodb), dotenv (переменные окружения), jsonwebtoken (JWT), socket.io
                     (отображение логов на страничку). К API написана ручная документация.
                 </div>
@@ -285,7 +285,7 @@
                 </a>
                 <div class="disc">
                     <a href="https://github.com/taratatuy/Writebot/" target="_blank">Чат-бот для сервиса Twitch</a> <br>
-                    Чат-бот, напсианный для канала знакомого. В ранних версиях использовал нативное twitch API, позже
+                    Чат-бот, написанный для канала знакомого. В ранних версиях использовал нативное twitch API, позже -
                     библиотеку tmi.js. В настоящее время не используется, поддержку не осуществляю.
                 </div>
             </section>
