Edit photo overlay

--- a/resume/index.html
+++ b/resume/index.html
@@ -70,13 +70,13 @@
                         <div class="overlay">
                             <h2>
                                 <a href="https://taratatuy.github.io/SplineInterpolation/" target="_blank">
-                                    Visit page
+                                    Смотреть проект
                                 </a>
                             </h2>
                             <h2>
                                 <a href="https://github.com/taratatuy/taratatuy.github.io/tree/master/SplineInterpolation"
                                     target="_blank">
-                                    View code
+                                    Показать код
                                 </a>
                             </h2>
                         </div>
@@ -97,13 +97,13 @@
                         <div class="overlay">
                             <h2>
                                 <a href="https://taratatuy.github.io/Covid-FL/" target="_blank">
-                                    Visit page
+                                    Смотреть проект
                                 </a>
                             </h2>
                             <h2>
                                 <a href="https://github.com/taratatuy/taratatuy.github.io/tree/master/Covid-FL"
                                     target="_blank">
-                                    View code
+                                    Показать код
                                 </a>
                             </h2>
                         </div>
@@ -126,13 +126,13 @@
                         <div class="overlay">
                             <h2>
                                 <a href="https://taratatuy.github.io/InsertionSort/" target="_blank">
-                                    Visit page
+                                    Смотреть проект
                                 </a>
                             </h2>
                             <h2>
                                 <a href="https://github.com/taratatuy/taratatuy.github.io/tree/master/InsertionSort/"
                                     target="_blank">
-                                    View code
+                                    Показать код
                                 </a>
                             </h2>
                         </div>
@@ -156,13 +156,13 @@
                         <div class="overlay">
                             <h2>
                                 <a href="https://taratatuy.github.io/CanvasCircles/" target="_blank">
-                                    Visit page
+                                    Смотреть проект
                                 </a>
                             </h2>
                             <h2>
                                 <a href="https://github.com/taratatuy/taratatuy.github.io/tree/master/CanvasCircles/"
                                     target="_blank">
-                                    View code
+                                    Показать код
                                 </a>
                             </h2>
                         </div>
@@ -180,7 +180,7 @@
                         <img class=" img-responsive" src="img/VueComponent.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit github</h2>
+                            <h2>Страница на Github</h2>
                         </div>
                     </div>
                 </a>
@@ -198,7 +198,7 @@
                         <img class=" img-responsive" src="http://placehold.it/300x250" height="250px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit page</h2>
+                            <h2>Смотреть проект</h2>
                         </div>
                     </div>
                 </a>
@@ -221,7 +221,7 @@
                         <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit github</h2>
+                            <h2>Показать код</h2>
                         </div>
                     </div>
                 </a>
@@ -241,7 +241,7 @@
                         <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit github</h2>
+                            <h2>Показать код</h2>
                         </div>
                     </div>
                 </a>
@@ -261,7 +261,7 @@
                         <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit github</h2>
+                            <h2>Показать код</h2>
                         </div>
                     </div>
                 </a>
@@ -279,7 +279,7 @@
                         <img class=" img-responsive" src="img/mechanical-gears-2.png" height="200px" width="300px"
                             alt="project photo">
                         <div class="overlay">
-                            <h2>Visit github</h2>
+                            <h2>Показать код</h2>
                         </div>
                     </div>
                 </a>
