[SI] Add timeout to display chart on page load

--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -96,7 +96,8 @@
     </div>
 
     <script defer>
-        new Menu()
+        // Добавил задержку при загрузке страницы для плавной анимации.
+        setTimeout(() => new Menu(), 180)
     </script>
 
     <script src="libs/bootstrap/bootstrap.bundle.min.js"></script>
