[resume] Discription fix

--- a/resume/index.html
+++ b/resume/index.html
@@ -226,11 +226,11 @@
                     </div>
                 </a>
                 <div class="disc">
-                    <a href="https://github.com/taratatuy/TheXPjct-server/" target="_blank">Сервер для личного
-                        проекта</a> <br> Бэкэнд на Node.js. Пока не запущен. API
-                    полностью готово, не хватает только клиентской части. По завершению, планируется размещение на
-                    heroku. Проект для отслеживания некоторых коммитов, создаваемых пользователем, и сбор по ним
-                    статистики: среднее число коммитов в год и месяц, периоды между коммитами и прочее. <br>
+                    <a href="https://github.com/taratatuy/TheXPjct-server/" target="_blank">Сервер для фиксирования
+                        событий и сбора статистики.</a> <br> Бэкэнд на Node.js. Проект для отслеживания некоторых
+                    коммитов, создаваемых пользователем, и сбор по ним статистики: среднее число коммитов в год и месяц,
+                    периоды между коммитами и прочее. Пока не запущен. API полностью готово, не хватает только
+                    клиентской части. По завершению, планируется размещение на heroku. <br>
                     Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv (переменные
                     окружения). Приложен .rest файл.
                 </div>
@@ -246,11 +246,13 @@
                     </div>
                 </a>
                 <div class="disc">
-                    <a href="https://github.com/taratatuy/DailyRadioServer/" target="_blank">Сервер для учебного
-                        проетка</a> <br>
+                    <a href="https://github.com/taratatuy/DailyRadioServer/" target="_blank">Сервер для интернет радио
+                        (учебный проект)</a> <br>
                     Бэкэнд на Node.js. Проект написан в качестве курсовой работы в вузе. API для передачи аудио файлов с
                     сервера на фронт (запрос к сторонним API не делается, аудио берется из соответствующей папки
-                    на сервере). Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv
+                    на сервере). Реализована регистрация и JWT аутентификация. Данные пользователей хранятся в MongoDB.
+                    <br>
+                    Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv
                     (переменные окружения), jsonwebtoken (JWT), bcrypt (шифрование ключей), sentry (логи в облако).
                     Приложен .rest файл.
                 </div>
@@ -266,11 +268,13 @@
                     </div>
                 </a>
                 <div class="disc">
-                    <a href="https://github.com/taratatuy/EvgenServer/" target="_blank">Сервер для мобильного
-                        приложения</a> <br>
-                    Курсовой проект в вузе. Сервис для пользовательских заметок. Используются библиотеки: express.js
-                    (API), mongoose (работа с mongodb), dotenv (переменные окружения), jsonwebtoken (JWT), socket.io
-                    (отображение логов на страничку). К API написана ручная документация.
+                    <a href="https://github.com/taratatuy/EvgenServer/" target="_blank">Сервер для хранения заметок
+                        (учебный проект)</a> <br>
+                    Курсовой проект в вузе. Сервис для пользовательских заметок. Написано API для сообщения с сервером,
+                    в качестве базы данных используется MongoDB. <br>
+                    Используются библиотеки: express.js (API), mongoose (работа с mongodb), dotenv (переменные
+                    окружения), jsonwebtoken (JWT), socket.io (отображение логов на страничку). К API написана ручная
+                    документация.
                 </div>
             </section>
             <section class="pj">
